--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "color-palette",
+  "name": "colors-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/icons": "^4.0.1",
-    "@material-ui/styles": "^4.0.2",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "chroma-js": "^2.0.3",
-    "rc-slider": "^8.6.12",
-    "react": "^16.8.6",
+    "emoji-mart": "^2.10.0",
+    "rc-slider": "^8.6.6",
+    "react": "^16.8.4",
+    "react-color": "^2.17.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-dom": "^16.8.4",
+    "react-material-ui-form-validator": "^2.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-transition": "^1.3.0",
+    "react-scripts": "2.1.8",
+    "react-sortable-hoc": "^1.7.1",
+    "react-transition-group": "^2.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,16 +29,22 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yocamyo/color-app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yocamyo/color-app/issues"
+  },
+  "homepage": "https://github.com/yocamyo/color-app#readme"
 }
